# Optimization

./: .gitignore  CMakeLists.txt
adam_project/include/: Adam.h
adam_project/src/: Adam.cpp  main.cpp
autodiff_project/include/: autodiff.h
autodiff_project/src/: autodiff.cpp  main.cpp
common/include/: plot_utils.h  read_csv.h  write_csv.h
common/src/: plot_utils.cpp  read_csv.cpp  write_csv.cpp
gradient_project/include/: GradientDescent.h
gradient_project/src/: GradientDescent.cpp  main.cpp
img/: input.pgm  output.pgm
knn_project/include/: knn.h
knn_project/src/: knn.cpp  main.cpp
minibatch_sgd_project/include/: MiniBatchSGD.h
minibatch_sgd_project/src/: MiniBatchSGD.cpp  main.cpp
nesterov_project/include/: Nesterov.h
nesterov_project/src/: Nesterov.cpp  main.cpp
pca_project/include/: pca_lapack.h
pca_project/src/: main.cpp  pca_lapack.cpp
sgd_project/include/: SGD.h
sgd_project/src/: SGD.cpp  main.cpp
svd_project/include/: SVDImage.h
svd_project/src/: SVDImage.cpp  main.cpp
